updating the meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- <meta
+  <meta
   http-equiv="Content-Security-Policy"
   content="default-src 'none'; img-src 'self'" />
-  <title>Shoppingassignment</title> -->
+  <title>Shoppingassignment</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link href="https://fonts.googleapis.com/css?family=Verdana:300,400,500" rel="stylesheet">
